--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
       android:paddingLeft="44dp"
       android:paddingRight="44dp">
       <Button
+          android:id="@+id/btn_login"
           android:layout_width="100dp"
           android:layout_height="40dp"
           android:layout_alignParentLeft="true"
@@ -23,6 +24,7 @@
           android:textSize="20sp"
           android:background="@drawable/shape_login_btn"/>
       <Button
+          android:id="@+id/btn_register"
           android:layout_width="100dp"
           android:layout_height="40dp"
           android:layout_alignParentRight="true"
