--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,16 @@
       android:layout_marginBottom="90dp"
       android:paddingLeft="44dp"
       android:paddingRight="44dp">
+
       <Button
           android:id="@+id/btn_login"
           android:layout_width="100dp"
           android:layout_height="40dp"
           android:layout_alignParentLeft="true"
+          android:background="@drawable/shape_login_btn"
           android:text="@string/login"
           android:textColor="#ffffff"
-          android:textSize="20sp"
-          android:background="@drawable/shape_login_btn"/>
+          android:textSize="20sp" />
       <Button
           android:id="@+id/btn_register"
           android:layout_width="100dp"
