--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,80 +11,90 @@
         android:layout_height="329dp"
         android:scaleType="fitXY"
         android:src="@mipmap/login"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="18dp"
-            android:layout_marginTop="278dp"
-            android:paddingLeft="43dp"
-            android:paddingRight="31dp"
             android:layout_height="230dp"
-            android:orientation="vertical"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginRight="18dp"
+            android:background="@drawable/shape_login_form"
             android:gravity="center"
-            android:background="@drawable/shape_login_form">
+            android:orientation="vertical"
+            android:paddingLeft="43dp"
+            android:paddingRight="31dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@mipmap/account"/>
+                    android:src="@mipmap/account" />
+
                 <EditText
                     android:id="@+id/et_account"
-                    android:layout_marginLeft="20dp"
                     android:layout_width="108dp"
                     android:layout_height="24dp"
-                    android:hint="@string/account_hint"
-                    android:textColorHint="#bcbcbc"
+                    android:layout_marginLeft="20dp"
                     android:background="@null"
-                    android:textSize="18sp"
-                    android:textColor="#000000"/>
+                    android:hint="@string/account_hint"
+                    android:textColor="#000000"
+                    android:textColorHint="#bcbcbc"
+                    android:textSize="18sp" />
             </LinearLayout>
+
             <View
-                android:layout_marginTop="23dp"
-                android:layout_marginBottom="23dp"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/divider"/>
+                android:layout_marginTop="23dp"
+                android:layout_marginBottom="23dp"
+                android:background="@color/divider" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@mipmap/pwd"/>
+                    android:src="@mipmap/pwd" />
+
                 <EditText
                     android:id="@+id/et_pwd"
-                    android:layout_marginLeft="20dp"
                     android:layout_width="108dp"
                     android:layout_height="24dp"
-                    android:hint="@string/pwd_hint"
-                    android:textColorHint="#bcbcbc"
+                    android:layout_marginLeft="20dp"
                     android:background="@null"
-                    android:textSize="18sp"
-                    android:textColor="@color/black"/>
+                    android:hint="@string/pwd_hint"
+                    android:textColor="@color/black"
+                    android:textColorHint="#bcbcbc"
+                    android:textSize="18sp" />
             </LinearLayout>
 
         </LinearLayout>
+
         <Button
             android:id="@+id/btn_login"
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="18dp"
-            android:layout_marginTop="67dp"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="67dp"
+            android:layout_marginRight="18dp"
             android:background="@drawable/shape_big_login_btn"
             android:text="@string/login"
-            android:textSize="24sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="24sp" />
 
     </LinearLayout>
 </RelativeLayout>
