--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,7 @@
                     android:layout_height="25dp"
                     android:src="@mipmap/account"/>
                 <EditText
+                    android:id="@+id/et_account"
                     android:layout_marginLeft="20dp"
                     android:layout_width="108dp"
                     android:layout_height="24dp"
@@ -61,6 +62,7 @@
                     android:layout_height="25dp"
                     android:src="@mipmap/pwd"/>
                 <EditText
+                    android:id="@+id/et_pwd"
                     android:layout_marginLeft="20dp"
                     android:layout_width="108dp"
                     android:layout_height="24dp"
@@ -73,6 +75,7 @@
 
         </LinearLayout>
         <Button
+            android:id="@+id/btn_register"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
             android:layout_marginTop="67dp"
