--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,24 +8,31 @@
     android:orientation="vertical"
     android:background="@color/white"
     tools:context=".activity.HomeActivity">
-    <androidx.viewpager.widget.ViewPager
+    <com.example.myapp.view.FixedViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/divider">
+
+    </View>
     <com.flyco.tablayout.CommonTabLayout
         android:id="@+id/commonTabLayout"
         android:layout_width="match_parent"
-        android:layout_height="54dp"
+        android:layout_height="66dp"
         android:background="#ffffff"
-        tl:tl_iconHeight="23dp"
-        tl:tl_iconWidth="23dp"
+        tl:tl_iconHeight="30dp"
+        tl:tl_iconWidth="30dp"
         tl:tl_indicator_color="#2C97DE"
         tl:tl_indicator_height="0dp"
-        tl:tl_textSelectColor="#2C97DE"
-        tl:tl_textUnselectColor="#66000000"
-        tl:tl_textsize="12sp"
+        tl:tl_textSelectColor="#0025ff"
+        tl:tl_textUnselectColor="#454544"
+        tl:tl_textsize="14sp"
         tl:tl_underline_color="#DDDDDD"
         tl:tl_underline_height="1dp"/>
 
