--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,6 +47,7 @@
                     android:layout_marginLeft="20dp"
                     android:background="@null"
                     android:hint="@string/account_hint"
+                    android:text="9999"
                     android:textColor="#000000"
                     android:textColorHint="#bcbcbc"
                     android:textSize="18sp" />
@@ -77,6 +78,7 @@
                     android:layout_marginLeft="20dp"
                     android:background="@null"
                     android:hint="@string/pwd_hint"
+                    android:text="9999"
                     android:textColor="@color/black"
                     android:textColorHint="#bcbcbc"
                     android:textSize="18sp" />
